removed bg img overflow property to troubleshoot issue w it not displaying

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -21,7 +21,6 @@ body {
     text-align: center;
     margin: 0;
     padding: 1px;
-    overflow: auto;
 }
 
 .landing-page {
